Validation du flag et  ajout de correctifs